--- a/templates/categories-list.html
+++ b/templates/categories-list.html
@@ -5,11 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="{{url_for('static', filename='styles.css')}}">
-  <title>Restaurants</title>
+  <title>Categories</title>
 </head>
 <body>
-  <h1>All Restaurants</h1>
-  <a href="{{url_for('add_restaurant')}}">Add new restaurant</a>
+  <h1>All Categories</h1>
+  <a href="{{url_for('add_category')}}">Add new category</a>
   {% with messages = get_flashed_messages() %}
     {% if messages %}
       {% for message in messages %}
@@ -17,15 +17,15 @@
       {% endfor %}
     {% endif %}
   {% endwith %}  
-  {% if not(restaurants) or not(restaurants[0]) %}
-    <p>No Restaurants available.</p>
+  {% if not(categories) or not(categories[0]) %}
+    <p>No categories available.</p>
   {% else %}
     <ul>
-      {% for rest in restaurants %}
+      {% for cat in categories %}
         <li>
-          <a href="{{url_for('show_menu', restaurant_id=rest.id)}}">{{rest.name}}</a><br>
-          <a href="{{url_for('edit_restaurant', restaurant_id=rest.id)}}">edit</a>&nbsp;&nbsp;
-          <a href="{{url_for('delete_restaurant', restaurant_id=rest.id)}}">delete</a>
+          <a href="{{url_for('show_books', category_id=cat.id)}}">{{cat.name}}</a><br>
+          <a href="{{url_for('edit_category', category_id=cat.id)}}">edit</a>&nbsp;&nbsp;
+          <a href="{{url_for('delete_category', category_id=cat.id)}}">delete</a>
         </li><br>
       {% endfor %}
     </ul>
