--- a/templates/delete-category.html
+++ b/templates/delete-category.html
@@ -5,13 +5,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="{{url_for('static', filename='styles.css')}}">
-  <title>delete restaurant</title>
+  <title>delete category</title>
 </head>
 <body>
-  <h1>Confirm that you want to delete {{restaurant.name}} restaurant</h1>
-  <form action="{{url_for('delete_restaurant', restaurant_id=restaurant.id)}}" method="post">
+  <h1>Confirm that you want to delete {{category.name}} category</h1>
+  <form action="{{url_for('delete_category', category_id=category.id)}}" method="post">
     <input type="submit" value="Delete">
-    <a href="{{url_for('show_restaurants')}}">Cancel</a>
+    <a href="{{url_for('show_categories')}}">Cancel</a>
   </form>
 </body>
 </html>
