--- a/templates/edit-category.html
+++ b/templates/edit-category.html
@@ -5,15 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="{{url_for('static', filename='styles.css')}}">
-  <title>edit restaurant</title>
+  <title>edit category</title>
 </head>
 <body>
-  <h1>Edit {{restaurant.name}}'s data</h1>
-  <form action="{{url_for('edit_restaurant', restaurant_id=restaurant.id)}}" method="post">
+  <h1>Edit {{category.name}}'s data</h1>
+  <form action="{{url_for('edit_category', category_id=category.id)}}" method="post">
     name:
-    <input type="text" value="{{restaurant.name}}" name="restaurant_name"><br><br>
+    <input type="text" value="{{category.name}}" name="category_name"><br><br>
     <input type="submit" value="Submit">
-    <a href="{{url_for('show_restaurants')}}">Cancel</a>
+    <a href="{{url_for('show_categories')}}">Cancel</a>
   </form>
 </body>
 </html>
