--- a/templates/public-category-books.html
+++ b/templates/public-category-books.html
@@ -4,12 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>{{restaurant.name}} Menu</title>
+  <title>{{category.name}} books</title>
   <link rel="stylesheet" href="{{url_for('static', filename='styles.css')}}">
 </head>
 <body>
-  <h1>{{restaurant.name}} Menu</h1>
-  <a href="{{url_for('add_item', restaurant_id=restaurant.id)}}">Add new item</a>
+  <h1>{{category.name}} books</h1>
   {% with messages = get_flashed_messages() %}
     {% if messages %}
       {% for message in messages %}
@@ -17,17 +16,15 @@
       {% endfor %}
     {% endif %}
   {% endwith %}    
-  {% if not(items) or not(items[0]) %}
-    <p>No Restaurants available.</p>
+  {% if not(books) or not(books[0]) %}
+    <p>No books available.</p>
   {% else %}
     <ul>
-      {% for item in items %}
+      {% for book in books %}
         <li>
-          <p>{{item.name}}</p>
-          <p>{{item.description}}</p>
-          <p>{{item.price}}</p>
-          <a href="{{url_for('edit_item', restaurant_id=restaurant.id, menu_id=item.id)}}">edit</a>&nbsp;&nbsp;
-          <a href="{{url_for('delete_item', restaurant_id=restaurant.id, menu_id=item.id)}}">delete</a>
+          <p>{{book.name}}</p>
+          <p>{{book.description}}</p>
+          <p>{{book.author}}</p>
         </li><br>
       {% endfor %}
     </ul>
