Add logout page

--- a/templates/login.html
+++ b/templates/login.html
@@ -2,8 +2,8 @@
 <html>
 <head>
   <meta name="google-signin-scope" content="openid email">
-  <meta name="google-signin-client_id" content="150625342836-362i0s186aqmhuf06du3eoogs2t40qna.apps.googleusercontent.com">
-  <script src="//apis.google.com/js/platform.js" async defer></script>
+  <meta name="google-signin-client_id" content="477649816139-ugpro9dj507g01hrsul4g5m6qeonc8v2.apps.googleusercontent.com">
+  <script src="//apis.google.com/js/platform.js?onload=init" async defer></script>
 </head>
 <body>
   <div class="g-signin2"
@@ -19,14 +19,8 @@
 
   <script>
     function onSignIn(googleUser) {
-      document.querySelector('.g-signin2').style.display = "none";
+      // document.querySelector('.g-signin2').style.display = "none";
       let resultCont = document.getElementById('result')
-
-      console.log(googleUser);
-      console.log(googleUser.code); // the only property on the object for the first time, after that it doesn't exist
-      //these are existed on refresh only, second time
-      // console.log(googleUser.getAuthResponse());
-      // console.log(googleUser.getBasicProfile());
 
       if (googleUser.code) {
         fetch('/gconnect?state={{STATE}}', {
@@ -37,17 +31,16 @@
           body: googleUser.code
         })
         .then(function(response) {
-          if (response.status == 200) {
-            return response.text()
+          if (response.status === 200) {
+            return response.text().then(function(body) {
+              result.innerHTML = "Login successful <br>" + body + "<br> redirecting...";
+              setTimeout(function() {
+                window.location.href="/"
+              }, 2000)
+            })
           } else {
             console.log(response.statusText)
           }
-        })
-        .then(function(respBody) {
-          result.innerHTML = "Login successful <br>" + respBody + "<br> redirecting...";
-            setTimeout(function() {
-              window.location.href="/"
-            }, 4000)
         })
         .catch(function(error) {
         })
@@ -55,7 +48,6 @@
     }
 
     function onSignInFailure(response) {
-      console.log('-------response-------')
       console.log(response) // the only property right there
     }
   </script>
