--- a/templates/categories-list.html
+++ b/templates/categories-list.html
@@ -8,7 +8,14 @@
   <title>Categories</title>
 </head>
 <body>
-  <h1>All Categories</h1>
+  <h1><a href="{{url_for('show_categories')}}">Books app</a></h1>
+  {% if 'name' in login_session %}
+    <span>{{login_session.name}}.. </span><a href="{{url_for('show_login')}}">Logout</a>
+  {% else%}
+    <a href="{{url_for('show_login')}}">Login</a>
+  {% endif %}
+  <hr>
+  <h2>All Categories</h2>
   <a href="{{url_for('add_category')}}">Add new category</a>
   {% with messages = get_flashed_messages() %}
     {% if messages %}
