--- a/templates/category-books.html
+++ b/templates/category-books.html
@@ -8,7 +8,14 @@
   <link rel="stylesheet" href="{{url_for('static', filename='styles.css')}}">
 </head>
 <body>
-  <h1>{{category.name}} books</h1>
+  <h1><a href="{{url_for('show_categories')}}">Books app</a></h1>
+  {% if 'name' in login_session %}
+    <span>{{login_session.name}}.. </span><a href="{{url_for('show_login')}}">Logout</a>
+  {% else%}
+    <a href="{{url_for('show_login')}}">Login</a>
+  {% endif %}
+  <hr>  
+  <h2>{{category.name}} books</h2>
   <a href="{{url_for('add_book', category_id=category.id)}}">Add new book</a>
   {% with messages = get_flashed_messages() %}
     {% if messages %}
