--- a/templates/edit-book.html
+++ b/templates/edit-book.html
@@ -8,7 +8,14 @@
   <title>Edit book</title>
 </head>
 <body>
-  <h1>Edit {{book.name}} book on {{category.name}} category</h1>
+  <h1><a href="{{url_for('show_categories')}}">Books app</a></h1>
+  {% if 'name' in login_session %}
+    <span>{{login_session.name}}.. </span><a href="{{url_for('show_login')}}">Logout</a>
+  {% else%}
+    <a href="{{url_for('show_login')}}">Login</a>
+  {% endif %}
+  <hr>  
+  <h2>Edit {{book.name}} book on {{category.name}} category</h2>
   <form action="{{url_for('edit_book', category_id=category.id, book_id=book.id)}}" method="post">
     Title: <br>
     <input type="text" value="{{book.name}}" name="book_name"><br>
