--- a/templates/edit-category.html
+++ b/templates/edit-category.html
@@ -8,7 +8,14 @@
   <title>edit category</title>
 </head>
 <body>
-  <h1>Edit {{category.name}}'s data</h1>
+  <h1><a href="{{url_for('show_categories')}}">Books app</a></h1>
+  {% if 'name' in login_session %}
+    <span>{{login_session.name}}.. </span><a href="{{url_for('show_login')}}">Logout</a>
+  {% else%}
+    <a href="{{url_for('show_login')}}">Login</a>
+  {% endif %}
+  <hr>  
+  <h2>Edit {{category.name}}'s data</h2>
   <form action="{{url_for('edit_category', category_id=category.id)}}" method="post">
     name:
     <input type="text" value="{{category.name}}" name="category_name"><br><br>
