--- a/templates/new-book.html
+++ b/templates/new-book.html
@@ -8,7 +8,14 @@
   <title>Add new book</title>
 </head>
 <body>
-  <h1>Add new book on {{category.name}} category</h1>
+  <h1><a href="{{url_for('show_categories')}}">Books app</a></h1>
+  {% if 'name' in login_session %}
+    <span>{{login_session.name}}.. </span><a href="{{url_for('show_login')}}">Logout</a>
+  {% else%}
+    <a href="{{url_for('show_login')}}">Login</a>
+  {% endif %}
+  <hr>  
+  <h2>Add new book on {{category.name}} category</h2>
   <form action="{{url_for('add_book', category_id=category.id)}}" method="post">
     <input type="text" placeholder="book name" name="book_name"><br>
     <input type="text" placeholder="book description" name="book_description"><br>
