--- a/templates/new-category.html
+++ b/templates/new-category.html
@@ -8,7 +8,14 @@
   <title>Add new category</title>
 </head>
 <body>
-  <h1>Add new category</h1>
+  <h1><a href="{{url_for('show_categories')}}">Books app</a></h1>
+  {% if 'name' in login_session %}
+    <span>{{login_session.name}}.. </span><a href="{{url_for('show_login')}}">Logout</a>
+  {% else%}
+    <a href="{{url_for('show_login')}}">Login</a>
+  {% endif %}
+  <hr>  
+  <h2>Add new category</h2>
   <form action="{{url_for('add_category')}}" method="post">
     <input type="text" placeholder="insert new category name" name="category_name">
     <input type="submit" value="Submit">
