--- a/templates/categories-list.html
+++ b/templates/categories-list.html
@@ -31,8 +31,10 @@
       {% for cat in categories %}
         <li>
           <a href="{{url_for('show_books', category_id=cat.id)}}">{{cat.name}}</a><br>
+          {% if cat.user_id == login_session.user_id %}
           <a href="{{url_for('edit_category', category_id=cat.id)}}">edit</a>&nbsp;&nbsp;
           <a href="{{url_for('delete_category', category_id=cat.id)}}">delete</a>
+          {% endif %}
         </li><br>
       {% endfor %}
     </ul>
